# bwapi

./: .gitignore  README.md  README.md.orig
bwapi/BWAPI/Source/: WMode.cpp.orig
bwapi/BWAPI/Source/BW/: FontUtils.h  PositionUnitTarget.cpp.orig
bwapi/BWAPI/Source/BWAPI/: AutoMenuManager.cpp.orig  GameDrawing.cpp.orig  GameImpl.cpp.orig  GameInternals.cpp.orig  GameUnits.cpp.orig  Map.cpp.orig  Server.cpp  Server.h  UnitUpdate.cpp.orig
bwapi/BWAPIClient/Source/: Client.cpp
bwapi/BWAPILIB/: CMakeLists.txt
bwapi/BWAPILauncher/: CMakeLists.txt
bwapi/BWAPILauncher/Source/: Main.cpp  ReplayViewer.cpp
bwapi/OpenBWData/BW/: BWData.cpp
bwapi/include/BWAPI/Client/: Client.h  CommandTemp.h
